--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="style.css">
     <meta charset = "UTF-8">
     <meta name="viewport" content = "width = device-width, initial-scale=1.0">
-    <title>Héctor Ricardo Rodríguez Gaytán</title>
+    <title>Hector Ricardo Rodriguez Gaytan</title>
+    <meta name="description" content="Página oficial de Héctor Rodríguez — estudiante, desarrollador y creador de proyectos en tecnología. Descubre mi trabajo y contacto.">
 </head>
 <body>
     <header> 
@@ -17,7 +18,7 @@
              <h2> 
                 Sobre mí:
             </h2>
-            <p>Hola, me presento, soy Héctor Ricardo Rodríguez Gaytán, nací el 1 de marzo del 2008 en Arequipa, Perú. Actualmente estudio Ciencias de la Computación en la 
+            <p>Hola, me presento, soy Hector Ricardo Rodriguez Gaytan, nací el 1 de marzo del 2008 en Arequipa, Perú. Actualmente estudio Ciencias de la Computación en la 
             Universidad Católica San Pablo. Desde pequeño me ha fascinado la tecnología y cómo evoluciona todos los días, pero también disfruto de muchas otras cosas como los
             videojuegos (titulos como The Last of Us o Uncharted), la música (Artistas como Imagine Dragons o Artic Monkeys), la literatura (escribo mi propio libro "Don Santos") y los 
             animales. Estudié en el Colegio San José Jesuitas, donde crecí mucho tanto en lo académico como en lo personal. Durante ese tiempo formé amistades que conservo hasta 
@@ -35,7 +36,7 @@
                     Datos importantes:
                 </h2>
                 <p>
-                    <li>Nombre Completo: Héctor Ricardo Rodríguez Gaytán</li>
+                    <li>Nombre Completo: Hector Ricardo Rodriguez Gaytan</li>
                     <li>Edad: 17 años</li>
                     <li>País: Perú</li>
                     <li>Ciudad: Arequipa</li>
@@ -132,11 +133,13 @@
         <h3>Amigos</h3>
         <p>Hazme un gran favor y apoya tambén a la pagina web de mis amigos: </p>
         <ul>
-            <li><a href="#">Página de...</a></li>
+            <li><a href="https://diegoamezap.github.io/Diego-Alonso-Meza-Perochena/">Página de Diego Alosno Meza Perochena</a></li>
+            <li><a href="https://piero-cs.github.io/piero-web/#presentacion">Página de Diego Alosno Meza Perochena</a></li>
         </ul>
     </aside>
     <footer>
-        <p>© 2025 Héctor Rodríguez</p>
+        <p>© 2025 Hector Ricardo Rodriguez Gaytan</p>
     </footer>
 </body>
+
 </html>
