--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p>Hazme un gran favor y apoya tambén a la pagina web de mis amigos: </p>
         <ul>
             <li><a href="https://diegoamezap.github.io/Diego-Alonso-Meza-Perochena/">Página de Diego Alosno Meza Perochena</a></li>
-            <li><a href="https://piero-cs.github.io/piero-web/#presentacion">Página de Diego Alosno Meza Perochena</a></li>
+            <li><a href="https://piero-cs.github.io/piero-web/#presentacion">Página de Piero Alejandro Coaguila Sanchez</a></li>
         </ul>
     </aside>
     <footer>
@@ -143,3 +143,4 @@
 </body>
 
 </html>
+
