--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <link rel="stylesheet" href="style.css">
     <meta charset = "UTF-8">
     <meta name="viewport" content = "width = device-width, initial-scale=1.0">
+    <meta name="description" content="Sitio personal de Héctor Ricardo Rodríguez Gaytán, estudiante de Ciencias de la Computación en la Universidad Católica San Pablo, Arequipa, Perú.">
+<meta name="keywords" content="Héctor Rodríguez, Héctor Ricardo Rodríguez Gaytán, UCSP, Ciencias de la Computación, Arequipa, programador, estudiante, tecnología">
+<meta name="author" content="Héctor Ricardo Rodríguez Gaytán">
+<meta name="robots" content="index, follow">
     <title>Hector Ricardo Rodriguez Gaytan</title>
     <meta name="description" content="Página oficial de Héctor Rodríguez — estudiante, desarrollador y creador de proyectos en tecnología. Descubre mi trabajo y contacto.">
 </head>
@@ -143,4 +147,5 @@
 </body>
 
 </html>
+
 
