--- a/index.html
+++ b/index.html
@@ -10,6 +10,30 @@
 <meta name="robots" content="index, follow">
     <title>Hector Ricardo Rodriguez Gaytan</title>
     <meta name="description" content="Página oficial de Héctor Rodríguez — estudiante, desarrollador y creador de proyectos en tecnología. Descubre mi trabajo y contacto.">
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Héctor Ricardo Rodríguez Gaytán",
+  "url": "https://hectorrodriguez17.github.io/mywebhr/",
+  "sameAs": [
+    "https://www.linkedin.com/in/hector-ricardo-rodriguez-gaytan-76639437b/",
+    "https://www.instagram.com/hrrg.010308/",
+    "https://github.com/HectorRodriguez17"
+  ],
+  "jobTitle": "Estudiante de Ciencias de la Computación",
+  "affiliation": {
+    "@type": "CollegeOrUniversity",
+    "name": "Universidad Católica San Pablo"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Arequipa",
+    "addressCountry": "Perú"
+  }
+}
+</script>
+
 </head>
 <body>
     <header> 
@@ -147,5 +171,6 @@
 </body>
 
 </html>
+
 
 
