--- a/index.html
+++ b/index.html
@@ -161,8 +161,9 @@
         <h3>Amigos</h3>
         <p>Hazme un gran favor y apoya tambén a la pagina web de mis amigos: </p>
         <ul>
-            <li><a href="https://diegoamezap.github.io/Diego-Alonso-Meza-Perochena/">Página de Diego Alosno Meza Perochena</a></li>
+            <li><a href="https://diegoamezap.github.io/Diego-Alonso-Meza-Perochena/">Página de Diego Alonso Meza Perochena</a></li>
             <li><a href="https://piero-cs.github.io/piero-web/#presentacion">Página de Piero Alejandro Coaguila Sanchez</a></li>
+            <li><a href="https://kasandraabarca.github.io/kasandraabarca/">Página de Luz Kasandra Abarca Huisa</a></li>
         </ul>
     </aside>
     <footer>
@@ -171,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
