--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <li><a href="https://diegoamezap.github.io/Diego-Alonso-Meza-Perochena/">Página de Diego Alonso Meza Perochena</a></li>
             <li><a href="https://piero-cs.github.io/piero-web/#presentacion">Página de Piero Alejandro Coaguila Sanchez</a></li>
             <li><a href="https://kasandraabarca.github.io/kasandraabarca/">Página de Luz Kasandra Abarca Huisa</a></li>
+            <li><a href="https://mariagraciacz.github.io/mariagraciacalderonz.github.io/">Página de María Gracía Calderon Zevallos</a></li>
         </ul>
     </aside>
     <footer>
@@ -172,6 +173,7 @@
 </body>
 
 </html>
+
 
 
 
